[workspace]
members = [
    ".",
    "xtask",
]

[package]
name = "cft-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
etherparse = "0.10.1"
rand = "0.8.5"
tun-tap = "0.1.2"
